online-shop-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-shop-backend-ingress
  namespace: online-shop
spec:
  ingressClassName: nginx
  rules:
    - host: "api-online-shop.tienminh.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: online-shop-backend-service
                port:
                  number: 5214
